# fangbot

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/plans/: 2026-03-10-encounter-based-clinical-skills-design.md  2026-03-10-encounter-based-clinical-skills.md
scripts/: release.sh
src/fangbot/: __init__.py  config.py  models.py
src/fangbot/brain/: progress.py  react.py  system_prompt.py  uncertainty.py
src/fangbot/brain/providers/: __init__.py  base.py  claude.py  local.py  openai.py
src/fangbot/chart/: __init__.py  consistency.py  episodes.py  models.py  parser.py  prompts.py  temporal.py  trends.py
src/fangbot/evaluation/: __init__.py  batch_runner.py  encounter_loader.py  encounter_metrics.py  encounter_models.py  gold_standard.py  metrics.py  models.py  report.py
src/fangbot/gateway/: cli.py  models_catalog.py  renderer.py  setup.py
src/fangbot/memory/: audit.py  session.py
src/fangbot/skills/: clinical_loader.py  evidence.py  mcp_client.py  tool_registry.py
src/fangbot/skills/clinical/: follow_up.md  initial_consultation.md  preoperative_evaluation.md  preventive_checkup.md  registry.yaml
src/fangbot/workflows/: __init__.py  admission_oneliner.py  engine.py  handoff_draft.py  models.py  pre_round_summary.py
src/openmedicine_agent/: __init__.py  config.py  models.py
src/openmedicine_agent/brain/: guardrails.py  react.py  system_prompt.py
src/openmedicine_agent/brain/providers/: __init__.py  base.py  claude.py  openai.py
src/openmedicine_agent/gateway/: cli.py
src/openmedicine_agent/memory/: audit.py  session.py
src/openmedicine_agent/skills/: mcp_client.py  tool_registry.py
studies/calculator/chadsvasc/cases/: case_002.yaml  case_005.yaml
studies/chadsvasc/: config.yaml
studies/chadsvasc/cases/: case_001.yaml  case_003.yaml  case_004.yaml
studies/encounter/initial_consultation/: config.yaml
studies/encounter/initial_consultation/cases/: afib_new_diagnosis.yaml  chest_pain_low_risk.yaml  (+3 more)
tests/: conftest.py  test_audit.py  test_cli.py  test_evaluation.py  test_evidence.py  test_mcp_client.py  test_metrics.py  test_model_discovery.py  test_providers.py  test_react_loop.py  test_setup.py  test_temporal.py  test_trends.py
tests/unit/: test_admission_oneliner.py  test_audit.py  test_chart_models.py  test_chart_parser.py  test_chart_tool_routing.py  test_clinical_loader.py  test_consistency.py  test_encounter_loader.py  test_encounter_metrics.py  test_encounter_models.py  test_handoff_draft.py  test_mcp_client.py  test_metrics.py  test_pre_round_summary.py  test_react_loop.py  test_setup.py  test_system_prompt.py  test_tool_routing.py  test_uncertainty.py  test_workflow_engine.py  test_workflow_models.py  test_workflow_react_integration.py  test_workflow_system_prompt.py
