[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openmedicine-agent"
version = "0.1.0"
description = "Open-source medical reasoning agent connecting to OpenMedicine MCP server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
gemini = ["google-genai>=1.0.0"]
ollama = ["ollama>=0.4.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "hypothesis>=6.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
agent = "openmedicine_agent.gateway.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/openmedicine_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring live MCP server",
]

[tool.ruff]
target-version = "py310"
line-length = 100
