[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fangbot"
version = "0.2.1"
description = "Clinical reasoning agent powered by OpenMedicine — fangs of the healing serpent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["clinical", "reasoning", "mcp", "openmedicine", "agent", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]

dependencies = [
    "anthropic>=0.40.0",
    "mcp>=1.0.0",
    "open-medicine>=0.6.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/RamosFBC/fangbot"
Repository = "https://github.com/RamosFBC/fangbot"
Issues = "https://github.com/RamosFBC/fangbot/issues"
Changelog = "https://github.com/RamosFBC/fangbot/blob/main/CHANGELOG.md"

[project.optional-dependencies]
gemini = ["google-genai>=1.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "hypothesis>=6.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
fangbot = "fangbot.gateway.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/fangbot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring live MCP server",
]

[tool.ruff]
target-version = "py310"
line-length = 100
